# k8s_deployment_status

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/k8s_deployment_status/: __init__.py  config.py  main.py
