[metadata]
name = k8s_deployment_status
version = 0.0.1
author = saltgen
author_email = sdnirvana94@gmail.com
description = Provides deployment status details for any Kubernetes pod
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saltgen/k8s_deployment_status
project_urls =
    Bug Tracker = https://github.com/saltgen/k8s_deployment_status/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src